# simulation_only_msgs

./: CMakeLists.txt  CODEOWNERS  LICENSE  README.md  custom.cmake  package.xml
msg/: AbsoluteTrajectoryWithID.msg  DeltaTrajectoryWithID.msg  ObjectInitialization.msg  ObjectRemoval.msg  ObjectRole.msg  SteeringAngleAndAcceleration.msg
