<?xml version="1.0"?>
<package format="2">
  <name>simulation_only_msgs</name>
  <version>1.0.0</version>
  <description>ROS messages for the simulation framework.</description>

  <license>BSD</license>
  <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>

  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>automated_driving_msgs</depend>

  <export>
  </export>
</package>
