<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>simulation_only_msgs</name>
  <version>1.0.0</version>
  <description>ROS messages for the simulation framework.</description>

  <license>BSD</license>
  <maintainer email="eduardo.molinos@kit.edu">Eduardo Molinos</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>

  <depend>automated_driving_msgs</depend>

  <export>
  </export>
</package>